--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </section>
       <section id="calculator">
         <form id="form">
-          <h1 id="title">Claculadora-IMC</h1>
+          <h1 id="title">Calculadora-IMC</h1>
           <div class="input-box">
             <label for="weight">Peso em kg </label>
             <div class="input-field">
@@ -41,14 +41,14 @@
             <label for="height">Altura em metros </label>
             <div class="input-field">
               <i class="fa-solid fa-ruler"></i>
-              <input type="number" id="height" required />
+              <input type="number" step="0.01" id="height" required />
               <span>m</span>
             </div>
           </div>
           <button id="calculate">Calcular</button>
         </form>
 
-        <div id="infos">
+        <div id="infos" class="hidden">
           <div id="result">
             <div id="bmi">
               <span id="value"> </span>
@@ -68,5 +68,7 @@
         </div>
       </section>
     </main>
+
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
